# openenv-delivery

./: Dockerfile  LICENSE  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  validate-submission.sh
grader/: easy.py  evaluator.py  hard.py  medium.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
