[project]
name = "openenv-delivery"
version = "0.1.0"
description = "AI delivery optimization environment using OpenEnv"
authors = [{name = "Shanmugapriya"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
